Upgrade KOMMA and Eclipse dependencies.
Upgraded the dependencies and also fixed some
deprecation warnings.